# mla-core

./: .clang-tidy  .gitignore  CMakeLists.txt  DataTypes.h  MemoryAllocator.h  README.md  info.json  sources.cmake  test_runner
.github/workflows/: benchmark.yml  test.yml
.junie/: AGENTS.md
ai/instructions/: array_lists.instructions.md  benchmark.instructions.md  build_project.instructions.md  cli_commands.instructions.md  create_a_module.instructions.md  create_a_test.instructions.md  error_handling.instructions.md  file_system.instructions.md  hash_maps.instructions.md  http_server_and_client.instructions.md  lifecycle_and_boot_events.instructions.md  logging.instructions.md  networking.instructions.md  project_and_data_type_rules.instructions.md  reflection.instructions.md  reflection_and_serialization.instructions.md  rpc_procedures.instructions.md  serialization.instructions.md  streams.instructions.md  strings.instructions.md  task_management.instructions.md
base-lib/core/: mla_native_resource.h  readme.md  sources.cmake
base-lib/core-test-support/: readme.md
base-lib/test-support/: readme.md  sources.cmake
core/: mla_area_pointer_memory_manager.cpp  mla_area_pointer_memory_manager.h  mla_data_types.cpp  mla_data_types.h  mla_default_pointer_memory_manager.cpp  mla_global_config.h  mla_native_resource.h  mla_native_resource_pointer_memory_manager.cpp  mla_noop_pointer_memory_manager.cpp  mla_pointer.cpp  readme.md
core-example-app/: main_app_linux.cpp  main_app_wasm.cpp  main_app_windows.cpp
core-example-app/modules/: main_app_background_task.h  main_app_cli.h  main_app_main_window.h
core-exmaple-app/: main_app.h  main_app_background_task.h  main_app_cli.h  main_app_main_window.h  main_app_web_ui.h  main_app_window_ui.h  readme.md
core-exmaple-app/modules/: main_app_background_task.h  main_app_cli.h
core-os/: mla_data_types.cpp  mla_data_types.h  mla_data_types_pointer.cpp  mla_default_pointer_memory_manager.cpp  mla_global_config.h  mla_globals.h  mla_noop_pointer_memory_manager.cpp  mla_pointer.cpp  readme.md
core-os-app/: main_app.h
core-os-exmaple-app/: main_app.h  main_app_background_task.h  main_app_cli.h  main_app_main_window.h  main_app_web_ui.h  main_app_window_ui.h  readme.md
core-os-platform/espidf/: mla_global_config_esp32.h  mla_global_file_system_esp32.h  mla_global_network_esp32.h  mla_global_network_wifi_esp32.h  mla_global_platform_esp32.h  mla_global_platform_esp8266.h  mla_global_platform_task_manager_esp32.h  mla_global_platform_task_manager_esp8266.h  mla_global_ui_surface_windows_arduiono_gfx.h  mla_global_ui_surface_windows_esp32_s3.h  readme.md
core-os-platform/generic/: mla_global_config_inmemory.h  mla_global_network_disabled.h  mla_global_platform_fast_float.h  mla_global_platform_generic.h  mla_global_ui_surface_disabled.h  mla_task_manager_pthread.h  mla_task_manager_single_thread.h
core-os-platform/linux/: mla_global_config_linux.h  mla_global_file_system_linux.h  mla_global_network_linux.h  mla_global_platform_linux.h  mla_global_platform_task_manager_linux.h  mla_global_ui_surface_linux_wayland.h  readme.md
core-os-platform/raspberry/: mla_global_config_raspberry-pico.h  mla_global_file_system_raspberry-pico.h  mla_global_network_raspberry-pico.h  mla_global_platform_raspberry-pico.h  mla_global_platform_task_manager_raspberry-pico.h  readme.md
core-os-platform/skia/: mla_global_ui_surface_skia.h  readme.md
core-os-platform/wasm/: mla_global_platform_wasm.h  mla_global_platform_wasm_standalone.h  mla_wasm_runner.css  mla_wasm_runner.html  mla_wasm_runner.js  mla_wasm_runner_custom_functions_template.js  readme.md  (+1 more)
core-os-test/: main_test.h  mla_array_list_test.h  mla_atomic_test.h  mla_buffer_test.h  mla_bytes_test.h  mla_cli_app_test.h  mla_cli_parser_test.h  mla_config_test.h  mla_data_types_test.h  mla_file_system_test.h  mla_hash_map_test.h  mla_hash_test.h  mla_http_chunked_stream_test.h  mla_http_client_test.h  mla_http_header_test.h  mla_http_rpc_test.h  mla_http_server_test.h  mla_id_test.h  mla_inject_test.h  mla_link_list_test.h  mla_list_contains_const.h  mla_logger_console_test.h  mla_logger_rpc_test.h  mla_math_utils_test.h  mla_memory_hook_test.h  mla_memory_test.h  mla_mutex_test.h  mla_network_test.h  mla_number_test.h  mla_pointer_test.h  mla_reference_test.h  mla_reflection_rpc_test.h  mla_reflection_test.h  mla_rpc_test.h  mla_rw_lock_test.h  mla_serializer_test.h  mla_sha1_test.h  mla_stream_deflate_test.h  mla_stream_test.h  mla_string_test.h  (+16 more)
core-os-test-support/: mla_benchmark_executor.cpp  mla_benchmark_executor.h  mla_test_cli_utils.h  mla_test_data_types.h  mla_test_executor.cpp  mla_test_executor.h  mla_test_global_config.h  mla_test_utils.cpp  mla_test_utils.h  readme.md
core-os-web-ui/: README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
core-test/: main_test.h  main_test_wasm.cpp  main_test_wasm_standalone.cpp  main_test_windows_multi_thread.cpp  mla_area_memory_test.h  mla_array_list_test.h  mla_atomic_test.h  mla_buffer_test.h  mla_bytes_test.h  mla_cli_app_test.h  mla_cli_parser_test.h  mla_config_test.h  mla_data_types_test.h  mla_external_task_test.h  mla_file_system_test.h  mla_hash_map_test.h  mla_hash_test.h  mla_http_chunked_stream_test.h  mla_http_client_test.h  mla_http_header_test.h  mla_http_multipart_test.h  mla_http_rpc_test.h  mla_http_server_test.h  mla_id_test.h  mla_link_list_test.h  mla_list_contains_const.h  mla_logger_console_test.h  mla_logger_rpc_test.h  mla_math_utils_test.h  mla_memory_hook_test.h  mla_memory_test.h  mla_mutex_test.h  mla_network_test.h  mla_number_test.h  mla_pointer_test.h  mla_reflection_rpc_test.h  mla_reflection_test.h  mla_rpc_test.h  mla_rw_lock_test.h  mla_serializer_test.h  (+15 more)
core-test-support/: mla_benchmark_executor.h  mla_test_data_types.cpp  mla_test_executor.cpp  mla_test_global_config.h  readme.md
core-web-ui/: README.md  index.html  package-lock.json  vite.config.ts
main/: .gitignore  AGENTS.md  CMakeLists.txt  GEMINI.md  build_all.sh  configs.sh  run_all_benchmarks.sh  run_all_tests.sh
(+936 files in other folders)
